drm/radeon: Add ability to get and change dpm state when radeon PX card is turned off

jira LE-1907
Rebuild_History Non-Buildable kernel-3.10.0-229.el7
Rebuild_CHGLOG: - [drm] radeon: Add ability to get and change dpm state when radeon PX card is turned off (Rob Clark) [1173317]
Rebuild_FUZZ: 97.59%
commit-author Pali Rohár <pali.rohar@gmail.com>
commit b07a657e3a05b81c8a30d60e3f3746ca5a48ee62

This fixing commit 4f2f203976964e267dc477de6648bdb3acd2b74b

bug:
https://bugzilla.kernel.org/show_bug.cgi?id=76321

	Signed-off-by: Pali Rohár <pali.rohar@gmail.com>
	Signed-off-by: Alex Deucher <alexander.deucher@amd.com>
	Cc: stable@vger.kernel.org
(cherry picked from commit b07a657e3a05b81c8a30d60e3f3746ca5a48ee62)
	Signed-off-by: Jonathan Maple <jmaple@ciq.com>